# model-serving-poc

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  train_model.py  verify_installation.py
dev/: variables.tf
model_serving_poc/: __init__.py  train_model.py
prod/: data.tf  locals.tf  provider.tf  remote_backend.tf
staging/: versions.tf
