[project]
name = "model-serving-poc"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "mlflow",
    "bentoml",
    "xgboost",
    "scikit-learn",
    "umami==0.0.56",
]

[tool.uv.sources]
umami = { index = "artifactory" }

[[tool.uv.index]]
name = "artifactory"
url = "https://upwork.jfrog.io/artifactory/api/pypi/pleng-pypi/simple"
explicit = true